@@ -1,8 +1,7 @@
 <?xml version="1.0"?>
-<!DOCTYPE legalnotice PUBLIC "-//OASIS//DTD DocBook XML V4.5//EN" "http://www.oasis-open.org/docbook/xml/4.5/docbookx.dtd" [
-]>
-<legalnotice>
+
+<legalnotice xmlns="http://docbook.org/ns/docbook" xmlns:xlink='http://www.w3.org/1999/xlink' version="5.0">
 	<para>
-		Copyright <trademark class="copyright"></trademark> &YEAR; &HOLDER; This material may only be distributed subject to the terms and conditions set forth in the GNU Free Documentation License (GFDL), V1.2 or later (the latest version is presently available at <link xlink:href="http://www.gnu.org/licenses/fdl.txt">http://www.gnu.org/licenses/fdl.txt</link>).
+		Copyright <trademark class="copyright"></trademark> YEAR; HOLDER; This material may only be distributed subject to the terms and conditions set forth in the GNU Free Documentation License (GFDL), V1.2 or later (the latest version is presently available at <link xlink:href="http://www.gnu.org/licenses/fdl.txt">http://www.gnu.org/licenses/fdl.txt</link>).
 	</para>
 </legalnotice>
