@@ -5,5 +5,5 @@ debug: 1
 xml_lang: en-US
 type: brand
 brand: common-db5
-dtdver: 5.1b4
+dtdver: 5.0
 version: 0.1
