@@ -1,6 +1,7 @@
 NEXT UNRELEASED
 - Support DocBook 5 as input format. BZ #1005042
 - Fix duplicate first author in PDF. BZ #996351
+- Include DocBook 5-compatible templates. BZ #697366
 
 3.2.1 Wed Sep 04 2013
 - Fix empty images dir causing packaging fail. BZ #995896
